tests/snapshots/snapshots__api-keys.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Merchant API key operations (create, list, revoke)

Usage: flute2 api-keys [OPTIONS] <COMMAND>

Commands:
  create  Create a merchant API key (POST /v2/api-keys)
  list    List merchant API keys (GET /v2/api-keys)
  revoke  Revoke a merchant API key (DELETE /v2/api-keys/{clientId})
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
