tests/snapshots/snapshots__api-keys_revoke.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Revoke a merchant API key (DELETE /v2/api-keys/{clientId}).

Requires `--yes` to prevent accidental revocation. 404 is treated as idempotent success (already revoked).

Usage: flute2 api-keys revoke [OPTIONS] --client-id <CLIENT_ID>

Options:
      --client-id <CLIENT_ID>
          Client ID of the key to revoke (required)

      --yes
          Confirm the revocation (required)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
