tests/snapshots/snapshots__auth.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Authentication and profile management

Usage: flute2 auth [OPTIONS] <COMMAND>

Commands:
  login   Prompt for client_id + client_secret and store them in the OS keychain
  status  Show active profile, environment, and live authentication status
  switch  Set the default profile in ~/.flute2/config.toml
  logout  Clear stored credentials for the active profile
  token   Print the current bearer token (debugging aid)
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
