tests/snapshots/snapshots__customers.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Customer operations (create, get, list, update, delete)

Usage: flute2 customers [OPTIONS] <COMMAND>

Commands:
  create  Create a new customer (POST /v2/customers)
  get     Fetch a single customer by ID (GET /v2/customers/{customerId})
  list    List customers (GET /v2/customers)
  update  Update a customer (PATCH /v2/customers/{customerId})
  delete  Delete a customer (DELETE /v2/customers/{customerId})
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
